assets/css/main.css
/* ... */
  #content > .style_showcase > #showcase_grid > #showcase_1 {
    grid-area: A;
    background: url("../images/showcase/showcase_A.jpg");
    background-size: cover;
    background-repeat: no-repeat; }
  #content > .style_showcase > #showcase_grid > #showcase_2 {
    grid-area: B;
    background: url("../images/showcase/showcase_B.jpg");
    background-size: cover;
    background-repeat: no-repeat; }
  #content > .style_showcase > #showcase_grid > #showcase_3 {
    grid-area: C;
    background: url("../images/showcase/showcase_C.jpg");
    background-size: cover;
    background-repeat: no-repeat; }
  #content > .style_showcase > #showcase_grid > #showcase_4 {
    grid-area: D;
    background: url("../images/showcase/showcase_D.jpg");
    background-size: cover;
    background-repeat: no-repeat; }
  #content > .style_showcase > #showcase_grid > #showcase_5 {
    grid-area: E;
    background: url("../images/showcase/showcase_E.jpg");
    background-size: cover;
    background-repeat: no-repeat; }
  #content > .style_showcase > #showcase_grid > #showcase_6 {
    grid-area: F;
    background: url("../images/showcase/showcase_F.jpg");
    background-size: cover;
    background-repeat: no-repeat; }
  #content > .fullscreen {
    min-height: 100vh; }

#header {
  position: fixed;
  left: 0;
  top: 0;
  z-index: 1000;
  width: 100%;
  background-color: white;
  display: grid;
  -moz-align-items: center;
  -webkit-align-items: center;
  -ms-align-items: center;
  align-items: center;
  grid-template-columns: 1.8rem auto 1.8rem;
  grid-template-rows: 1.8rem;
  grid-template-areas: "logo title menu_icon"; }
  #header > #logo {
    grid-area: logo;
    text-align: center;
    z-index: 1001;
    color: #414141;
    overflow: hidden;
    /* Disable scroll + align baseline */ }
  #header > #title {
    grid-area: title;
    text-align: center;
    z-index: 1001;
    color: #414141;
    overflow: hidden;
    /* Disable scroll + align baseline */ }
  #header > #menu_icon {
    grid-area: menu_icon;
    text-align: center;
    z-index: 1001;
    color: #414141;
    overflow: hidden;
    /* Disable scroll + align baseline */ }
  @media only screen and (min-width: 768px) {
    #header {
      grid-template-columns: 2.5rem 15rem auto;
      grid-template-rows: 3rem;
      grid-template-areas: "logo title menu";
      font-size: 1.2rem;
      line-height: 3rem; }
      #header > #menu_icon {
        display: none; }
      #header > #logo {
        grid-area: logo;
        overflow: hidden;
        /* Disable scroll + align baseline */ }
      #header > #title {
        grid-area: title;
        margin: auto auto auto 0;
        overflow: hidden;
        /* Disable scroll + align baseline */ } }

/* The menu is an overlay menu on small screens 
and fully expanded by default on larger screens */
@media only screen and (max-width: 767px) {
  #overlay_menu {
    position: fixed;
    z-index: 1000;
    top: 1.8em;
    left: 0;
    height: 1.8rem;
    width: 100%;
    background-color: rgba(0, 0, 0, 0.4);
    overflow: hidden;
    /* Disable scroll + align baseline */
    text-align: center;
    /* The navigation menu links */ }
    #overlay_menu a {
      display: inline-block;
      text-decoration: none;
      font-size: 0.8rem;
      color: white;
      padding: 0 0.2rem 0 0.2rem;
      transition: 0.3s; }
    #overlay_menu:first-child {
      padding-left: auto; }
    #overlay_menu:last-child {
      padding-right: auto; } }
@media only screen and (min-width: 768px) {
  #overlay_menu {
    grid-area: menu;
    /* defined above inside #header */
    margin: auto 0 auto auto;
    overflow: hidden;
    /* Disable scroll + align baseline */
    /* The navigation menu links */ }
    #overlay_menu a {
      display: inline-block;
      height: 3rem;
      align-self: top;
      text-decoration: none;
      font-size: 1.2rem;
      color: #414141;
      padding: 0 0.2rem 0 0.2rem;
      outline: 0; }
    #overlay_menu:first-child {
      padding-left: 0; }
    #overlay_menu:last-child {
      padding-right: 0.5rem; }
    #overlay_menu a:hover {
      background: #0d89e4; } }
#footer {
  display: grid;
  text-align: center;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: auto;
  grid-template-areas: "footer_title footer_title" "contacts contacts" "social social" "copyright copyright" "credits credits";
  background: #39454b;
  color: white;
  overflow: hidden;
  min-height: 50vh; }
  @media only screen and (min-width: 1280px) {
    #footer {
      grid-template-columns: 10% 1fr 1fr 10%;
      grid-template-rows: auto;
      grid-template-areas: ". footer_title footer_title ." ". social contacts ." ". social contacts ." ". copyright copyright ." ". credits credits ."; } }
  #footer > .fa-inverse {
    color: #39454b; }
  #footer a {
    display: inline-block;
    margin: 0;
    color: inherit;
    text-decoration: none; }
  #footer > #footer_title {
    grid-area: footer_title; }
  #footer > #contacts {
    grid-area: contacts; }
    @media only screen and (min-width: 1280px) {
      #footer > #contacts {
        text-align: left; } }
  #footer > #social {
    grid-area: social; }
    @media only screen and (min-width: 1280px) {
      #footer > #social {
        text-align: left; } }
  #footer > #copyright {
    grid-area: copyright; }
  #footer > #credits {
    grid-area: credits;
    padding-top: 3em;
    color: rgba(185, 186, 187, 0.2); }
    #footer > #credits > a {
      text-decoration: underline; }

#footer {
  display: grid;
  text-align: center;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: auto;
  grid-template-areas: "footer_title footer_title" "contacts contacts" "social social" "copyright copyright" "credits credits";
  background: #39454b;
  color: white;
  overflow: hidden;
  min-height: 50vh; }
/* ... */

